@startuml
class QuestManager {
    + maxActiveQuests : int <<get>>
    - Start() : void
    + OnDayStart() : void
    - UpdateQuestTimers() : void
    - RefreshQuests() : void
    + CheckQuestProgress(itemName:string, amount:int) : void
    - CompleteQuest(quest:ActiveQuest) : void
}
class ActiveQuest {
    + currentAmount : int
    + remainingDays : int
    + isCompleted : bool
    + ActiveQuest(data:QuestData)
}
class "List`1"<T> {
}
MonoBehaviour <|-- QuestManager
QuestManager o-> "availableQuests<QuestData>" "List`1"
QuestManager --> "onQuestsUpdated" UnityEvent
QuestManager o-> "ActiveQuests<ActiveQuest>" "List`1"
ActiveQuest --> "questData" QuestData
@enduml
